# kascara

./: Makefile.in  README  acconfig.h  aclocal.m4  config.h  config.h.in  configure  configure.in
kascara/: Makefile.in  main.cpp  mainwin.cpp  mainwin.h
kascara/ttyize/: Makefile.edit_it  ttyize  ttyize.cpp
